CSS/style.gallery.css
:root {
  --primary-color: #177e89;
  --secondary-color: #cfe0c3;
  --third-color: #ef6013db;
  --fourth-color: #d4c2fc;
  --fifth-color: #8a7090;
  --sixth-color: #1f363d;
  --highlight: #ff1ead;
  --ecriture: #000;
  --fond: #f1f1f1;
}
*,
* :before,
*:after {
  box-sizing: border-box;
}
html,
body {
  font-family: "Manrope", sans-serif;
  background-color: var(--fond);
  margin: 0;
  padding: 0;
  height: auto;
  width: 100%;
  position: relative;
}
html {
  height: 100%;
  scroll-behavior: smooth;
  font-size: 100%;
}
h2 {
  font-size: clamp(0.4rem, 3vw + 1.9rem, 3.5rem);
  margin: 4rem 0 6rem 0;
  font-family: "Suranna", serif;
}
p {
  font-size: clamp(0.4rem, 1.5vw + 1.1rem, 1rem);
}

/* **********************************************        Nav Bar Burger    ********************************************** */

header {
  width: 100%;
  height: 65px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  z-index: 2;
  position: absolute;
  text-decoration: none;
}
header a {
  text-decoration: none;
  color: var(--primary-color);
}
header h2 {
  font-size: clamp(1.3rem, 2vw + 1rem, 1.8rem);
  margin: 0;
  position: absolute;
  top: 26px;
  left: 38px;
  font-weight: 400;
  line-height: 38px;
}
header .nav-title a {
  position: fixed;
  display: inline-block;
}
header .nav-title a:hover {
  color: #24afbe;
}
header .onglets {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 0 2rem;
}
header .sous-onglets {
  display: none;
}
.sous-onglets a {
  font-size: clamp(0.6rem, 1vw + 0.7rem, 1rem);
  position: relative;
  display: inline-block;
  font-weight: 400;
  margin: 0 6px;
}
header .sous-onglets a::after {
  content: "";
  display: block;
  position: absolute;
  bottom: -2px;
  width: 100%;
  height: 1px;
  transform: scale(0);
  transform-origin: left;
  background-color: var(--primary-color);
  transition: transform 0.3s ease-out;
}
header .sous-onglets a:hover::after {
  transform: scaleX(1);
}
.sous-sous-onglets {
  display: none;
}
.header__burger {
  display: none;
}
.header__burger svg {
  stroke: black;
  width: 30px;
}
.header__nav__close {
  display: none;
}
.header__nav__close svg {
  stroke: var(--primary-color);
  width: 30px;
  position: absolute;
  top: 16px;
  left: 16px;
}

/* **********************************************        Side Bar        ********************************************** */

.side-bar {
  position: fixed;
  left: 0;
  top: 50%;
  transform: translateY(-50%);
  text-decoration: none;
}
.side-bar a {
  text-decoration: none;
  color: var(--primary-color);
  font-size: clamp(0.6rem, 1vw + 0.7rem, 1rem);
}
.side-bar .sous-onglets {
  display: flex;
  flex-direction: column;
  padding-left: 2rem;
}
.side-bar .sous-onglets a {
  margin: 10px 0;
  font-size: clamp(0.6rem, 1vw + 1.2rem, 1.3rem);
  font-weight: 400;
}
.side-bar .sous-onglets a:hover {
  color: #24afbe;
}
#so2 {
  font-weight: 600;
}
.side-bar .sous-sous-onglets a {
  margin: 6px 0px 6px 18px;
  font-size: clamp(0.1rem, 0.8vw + 0.7rem, 1rem);
}
.side-bar .sous-sous-onglets {
  display: flex;
  flex-direction: column;
}
.logos {
  display: flex;
  gap: 1rem;
  cursor: pointer;
  margin: 0.5rem 0;
}
.logos img {
  width: 20px;
  height: auto;
}
.logo1:hover {
  content: url("/ressources/rs/insta.png");
}
.logo2:hover {
  content: url("/ressources/rs/800px-Telegram_Messenger.png");
}
.logo3:hover {
  content: url("/ressources/rs/facebook-logo-3-1.png");
}
.logo4:hover {
  content: url("/ressources/rs/github.png");
}
/* ********************************************       Dark mode       ********************************************* */
.darkmode-container {
  position: fixed;
  top: 10px;
  right: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0 20px 10px 0;
}
.theme-switch {
  width: 50px;
  height: 20px;
  background: #177e89;
  border-radius: 50px;
  position: relative;
  padding: 10px;
  outline: 1px solid var(--ecriture);
  cursor: pointer;
}
.switch {
  width: 15px;
  height: 15px;
  background: var(--fond);
  border-radius: 100%;
  position: absolute;
  top: 3px;
  left: 4px;
  transition: 0.5s all ease;
}
.dark-theme {
  --background: #000;
  --text: #fff;
  background: var(--background);
}
body.dark {
  color: #fff !important;
  background: #333 !important;
  --ecriture: #f1f1f1;
  --fond: #000;
  --primary-color: #f1f1f1;
}
body.dark .switch {
  transform: translateX(27px);
}

/* ********************************************        Section 1  Hero       ********************************************* */

#grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: 278px;
  gap: 20px;
  max-width: 820px;
  height: auto;
  margin: 0px auto;
  padding: 90px 0;
}

#grid :nth-child(4n + 1),
#grid :nth-child(4n + 4) {
  grid-column: span 2;
}
#nature-2 {
  border: solid 2px var(--ecriture);
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: clamp(1.2rem, 2vw + 1rem, 2rem);
  cursor: default;
}
#nature-2 span {
  font-family: "Suranna", serif;
  color: var(--ecriture);
}
#nature-2:hover {
  transform: none;
  box-shadow: none;
  z-index: 0; /*bug correction */
}
.grid-item {
  overflow: hidden;
  cursor: pointer;
  transition: all 0.4s ease;
  position: relative;
}

.grid-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  transition: all 0.4s ease;
  position: relative;
}
.grid-item p {
  position: absolute;
  z-index: 500;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #ffffff;
  display: none;
}
.grid-item:hover {
  transform: scale(1.01);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
  z-index: 2; /*bug correction */
}

.grid-img:hover {
  transform: scale(1.01);
  filter: brightness(50%);
}

.grid-item:hover p {
  display: block;
  filter: none;
}

#popup-bg {
  display: none;
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 3;
  justify-content: center;
  align-items: center;
}

#popup-bg.active {
  display: flex;
}

#popup-content {
  max-width: 55%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

#popup-img {
  width: 100%;
  height: auto;
}

#popup-close {
  position: absolute;
  top: 0;
  right: 0;
  transform: translate(50%, -50%);
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 40px;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

#popup-close:hover {
  background-color: orange;
}
.btn-nav {
  font-size: 50px;
  color: white;
  position: absolute;
  display: none;
}
#popup-bg .right {
  right: 0;
}
#popup-bg .left {
  left: 0;
}

